manifest/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello
spec:
  selector:
    matchLabels:
      app: hello
  template:
    metadata:
      labels:
        app: hello
    spec:
      containers: 
        - name: hello
          image: ridwands/hello-golang
          imagePullPolicy: Always
          command: ["./main"]
