manifest/ingress-kong.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: hellp-ingress
  annotations:
    kubernetes.io/ingress.class: "kong"
spec:
  rules:
  - http:
      paths:
      - path: /
        backend:
          serviceName: hello-service
          servicePort: 80
